Fixed white gaps issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,5 @@ html {
 body {
   margin: 0;
   /* overflow: hidden; */
+  overflow-x: hidden;
 }
